tests/lean/simpArgTypeMismatch.lean.expected.out
simpArgTypeMismatch.lean:3:29-3:33: error: Application type mismatch: In the appplication
  decide_eq_false Unit
the final argument
  Unit
has type
  Type : Type 1
but is expected to have type
  ¬?m : Prop
